
0.2
 * applied some PEP8 rules, fix TYPO and reorganize code